--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       </div>
     </header>
     <main>
-      <div class="flex justify-between gap-4">
+      <div
+        class="flex flex-col lg:flex-row max-md:items-center justify-between gap-6"
+      >
         <!-- cards shapes -->
         <div id="card-shapes" class="grid lg:grid-cols-3 gap-4">
           <!-- triangle -->
