Some UI issues fixed [2]

--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
         class="flex flex-col lg:flex-row max-md:items-center justify-between gap-6"
       >
         <!-- cards shapes -->
-        <div id="card-shapes" class="grid lg:grid-cols-3 gap-4">
+        <div id="card-shapes" class="grid lg:grid-cols-3 gap-6">
           <!-- triangle -->
-          <div class="card border-2 border-slate-100 pt-5 w-96 bg-base-100">
-            <figure>
+          <div
+            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+          >
+            <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/triangle.png" alt="Shoes" />
             </figure>
             <div class="card-body text-center">
@@ -79,8 +81,10 @@
             </div>
           </div>
           <!-- Rectangle -->
-          <div class="card border-2 border-slate-100 pt-5 w-96 bg-base-100">
-            <figure>
+          <div
+            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+          >
+            <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/rectangle.png" alt="Shoes" />
             </figure>
             <div class="card-body text-center">
@@ -113,8 +117,10 @@
             </div>
           </div>
           <!-- Parallelogram -->
-          <div class="card border-2 border-slate-100 pt-5 w-96 bg-base-100">
-            <figure>
+          <div
+            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+          >
+            <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/parallelogram.png" alt="Shoes" />
             </figure>
             <div class="card-body text-center">
@@ -147,8 +153,10 @@
             </div>
           </div>
           <!-- Rhombus -->
-          <div class="card border-2 border-slate-100 pt-5 w-96 bg-base-100">
-            <figure>
+          <div
+            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+          >
+            <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/rhombus.png" alt="Shoes" />
             </figure>
             <div class="card-body text-center">
@@ -183,9 +191,11 @@
             </div>
           </div>
           <!-- Pentagon -->
-          <div class="card border-2 border-slate-100 pt-5 w-96 bg-base-100">
-            <figure>
-              <img src="./images/pentagon.png" alt="Shoes" />
+          <div
+            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+          >
+            <figure class="max-w-72 mx-auto flex justify-center">
+              <img class="" src="./images/pentagon.png" alt="Shoes" />
             </figure>
             <div class="card-body text-center">
               <h2 class="font-bold text-2xl">Pentagon</h2>
@@ -217,8 +227,10 @@
             </div>
           </div>
           <!-- Ellipse -->
-          <div class="card border-2 border-slate-100 pt-5 w-96 bg-base-100">
-            <figure>
+          <div
+            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+          >
+            <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/ellipse.png" alt="Shoes" />
             </figure>
             <div class="card-body text-center">
