Some UI issues fixed [3]

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="card-shapes" class="grid lg:grid-cols-3 gap-6">
           <!-- triangle -->
           <div
-            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+            class="card rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
           >
             <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/triangle.png" alt="Shoes" />
@@ -82,7 +82,7 @@
           </div>
           <!-- Rectangle -->
           <div
-            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+            class="card rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
           >
             <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/rectangle.png" alt="Shoes" />
@@ -118,7 +118,7 @@
           </div>
           <!-- Parallelogram -->
           <div
-            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+            class="card rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
           >
             <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/parallelogram.png" alt="Shoes" />
@@ -154,7 +154,7 @@
           </div>
           <!-- Rhombus -->
           <div
-            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+            class="card rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
           >
             <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/rhombus.png" alt="Shoes" />
@@ -192,7 +192,7 @@
           </div>
           <!-- Pentagon -->
           <div
-            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+            class="card rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
           >
             <figure class="max-w-72 mx-auto flex justify-center">
               <img class="" src="./images/pentagon.png" alt="Shoes" />
@@ -228,7 +228,7 @@
           </div>
           <!-- Ellipse -->
           <div
-            class="rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
+            class="card rounded-xl lg:max-w-80 border-2 border-slate-100 pt-5 w-96 bg-base-100"
           >
             <figure class="max-w-72 mx-auto flex justify-center">
               <img src="./images/ellipse.png" alt="Shoes" />
